Use List#of method in Autoscaling#getActions
This commit replaces a use of Collections#emptyList with List#of as the
preferred approach for collection convenience methods in master.